# gLM2

./: README.md  main.py  pyproject.toml  tutorial.ipynb
pca/: __init__.py  pca.py
retrieve_embeddings/: __init__.py  retrieve_embeddings.py  test.fasta  util.py
scripts/: test.py
tests/: test_saving_loading.py
