[project]
name = "glm2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.83",
    "einops>=0.8.1",
    "hf-transfer>=0.1.9",
    "numpy>=1.24.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
]
