[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glm2"
version = "0.1.0"
description = "A mixed-modality Genomic Language Model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.83",
    "cuml-cu12>=25.10.0",
    "einops>=0.8.1",
    "hf-transfer>=0.1.9",
    "ipykernel>=7.1.0",
    "numpy>=1.24.0",
    "pytest>=9.0.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["model*", "retrieve_embeddings*", "pca*"]

[tool.uv.sources]
"cuml-cu12" = { index = "rapids" }

[[tool.uv.index]]
name = "rapids"
url = "https://pypi.anaconda.org/rapidsai-wheels-nightly/simple"
explicit = true
